@@ -1,5 +1,5 @@
 .\" This manpage is licensed under the GNU Public License
-.TH AUTOSP 1 2019-12-22  "" ""
+.TH AUTOSP 1 2021-01-07  "" ""
 
 .SH NAME
 autosp \- preprocessor to generate note-spacing commands for MusiXTeX scores
@@ -110,7 +110,7 @@ as indicated.
 If there is a single staff, consecutive whole-bar rest bars
 are merged into a multi-bar rest. Bar-centered rests can be
 coded using the standard \\def\\atnextbar notation but 
-the non-standard command \\Cpause in a note segment also generates a
+the non-standard command \\Cpause (or \\Cp) in a note segment also generates a
 bar-centered rest.
 
 Spacing commands \\sk and \\bsk in the source are discarded,
