@@ -1,4 +1,4 @@
-%  Generated by autosp (2020-03-11).
+%  Generated by autosp (2021-01-07).
 \input musixtex
 \input musixplt
 \input soul.sty
