@@ -1,3 +1,7 @@
+2021-01-08  Akira Kakuto  <kakuto@w32tex.org>
+
+	Import autosp-2021-01-07.
+
 2020-03-11  Karl Berry  <karl@tug.org>
 
 	Import autosp-2020-03-11.
