@@ -1,3 +1,8 @@
+2021-01-08  Akira Kakuto  <kakuto@w32tex.org>
+
+	* Import autosp-2021-01-07.
+	configure.ac: Adapted.
+
 2020-06-07  Karl Berry  <karl@freefriends.org>
 
 	* ac/withenable.ac: omit $Id$ from generated output.
